# adventofcode

./: .gitignore  README.md  go.mod  go.sum  go.work.sum
2018/: adventofcode2018.cabal
2018/src/: 2018-12-01.hs  2018-12-02.hs  2018-12-03.hs  2018-12-04.hs  2018-12-05.hs  2018-12-06.hs  2018-12-07.hs  2018-12-08.hs  2018-12-09.hs  2018-12-10.hs  2018-12-11.hs  2018-12-12.hs  2018-12-13.hs  2018-12-14.hs  2018-12-15.hs  2018-12-16.hs  2018-12-17.hs  2018-12-18.hs  2018-12-19.hs
2019/: 2019-12-01.hs  adventofcode2019.cabal
2019/app/: 2019-12-01.hs  2019-12-02.hs  2019-12-03.hs  2019-12-04.hs  2019-12-05.hs  2019-12-06.hs  2019-12-07.hs
2019/intcode/: IntCode.hs
2019/src/: 2019-12-02.hs  2019-12-03.hs  2019-12-05.hs  2019-12-06.hs  2019-12-07.hs  2019-12-08.hs  2019-12-09.hs  2019-12-10.hs  2019-12-11.hs  2019-12-12.hs  2019-12-13.hs  2019-12-14.hs  2019-12-15.hs  2019-12-16.hs  2019-12-17.hs  2019-12-18.astar.hs  2019-12-18.bfs.hs  2019-12-18.hs  2019-12-19.hs  2019-12-20.hs  2019-12-21.hs  2019-12-22.hs  2019-12-23.hs  2019-12-24.hs  2019-12-24.p1.hs  2019-12-25.hs
2019/test/: Tests.hs
2020/: q1.py  q10.py  q10i.py  q11.py  q12.py  q13.py  q14.py  q15.py  q16.py  q17.py  q18.py  q19.py  q1a.py  q2.py  q20.py  q21.py  q22.py  q23.py  q24.py  q25.py  q3.py  q4.py  q5.py  q6.py  q7.py  q7ii.py  q8.py  q9.py
2021/: 2021-12-01.py  2021-12-02.py  2021-12-03.py  2021-12-04.py  2021-12-05.py  2021-12-06.py  2021-12-07.py  2021-12-08.py  2021-12-09.py  2021-12-10.py  2021-12-11.py  2021-12-12.py  2021-12-13.py  2021-12-14.py  2021-12-15.py  2021-12-16.py  2021-12-17.py  2021-12-18.py  2021-12-19.py  2021-12-20.py  2021-12-21.py  2021-12-22.py  2021-12-23.py  2021-12-24.py  2021-12-25.py
2022/: 2022-12-01.py  2022-12-02.py  2022-12-03.py  2022-12-04.py  2022-12-05.py  2022-12-06.py  2022-12-07.py  2022-12-08.py  2022-12-09.py  2022-12-10.py  2022-12-11.py  2022-12-12.py  2022-12-13.py  2022-12-14.py  2022-12-14.v1.py  2022-12-15.py  2022-12-16.py  2022-12-16.v1.py  2022-12-16.v2.py  2022-12-16.v3.py  2022-12-16.v4.py  2022-12-17.py  2022-12-18.py  2022-12-19.py  2022-12-20.py  2022-12-21.py  2022-12-22.py  2022-12-23.py  2022-12-24.py  2022-12-25.py
2023/: 2023-12-01.go  time.sh
2023/2023-12-01/: 2023-12-01.go
2023/2023-12-02/: 2023-12-02.go
2023/2023-12-03/: main.go
2023/2023-12-04/: main.go
2023/2023-12-05/: main.go
2023/2023-12-06/: main.go
2023/2023-12-07/: main.go
2023/2023-12-08/: main.go
2023/2023-12-09/: main.go
2023/2023-12-10/: main.go
2023/2023-12-11/: main.go
2023/2023-12-12/: main.go
2023/2023-12-13/: main.go
2023/2023-12-14/: main.go
2023/2023-12-15/: main.go
2023/2023-12-16/: main.go
2023/2023-12-16.cc/: main.go
2023/2023-12-16.map/: main.go
2023/2023-12-17/: main.go
2023/2023-12-18/: main.go
2023/2023-12-19/: main.go
2023/2023-12-20/: 2023-12-20.dot  main.go
2023/2023-12-21/: main.go
2023/2023-12-22/: main.go
2023/2023-12-23/: main.go
2023/2023-12-23.part1/: main.go
2023/2023-12-24/: main.go
2023/2023-12-25/: 2023-12-25.dot  main.go
2024/: Cargo.toml
2025/: Cargo.toml  time.sh
