cabal-version:      2.4
name:               adventofcode2019
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             kevin campbell
maintainer:         kevin.campbellrage@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common aoc-common
    build-depends:       base, split, text, containers, aoc
    hs-source-dirs:      src

library aoc
    exposed-modules:     IntCode
    hs-source-dirs:      intcode
    default-language:    Haskell2010
    build-depends:       base, split, text, containers

executable Day01
    import:              aoc-common
    main-is:             2019-12-01.hs

executable Day02
    import:              aoc-common
    main-is:             2019-12-02.hs

executable Day03
    import:              aoc-common
    main-is:             2019-12-03.hs

executable Day04
    import:              aoc-common
    main-is:             2019-12-04.hs

executable Day05
    import:              aoc-common
    main-is:             2019-12-05.hs

executable Day06
    import:              aoc-common
    main-is:             2019-12-06.hs

executable Day07
    import:              aoc-common
    main-is:             2019-12-07.hs

executable Day08
    import:              aoc-common
    main-is:             2019-12-08.hs

executable Day09
    import:              aoc-common
    main-is:             2019-12-09.hs