[package]
name = "aoc2025"
version = "0.1.0"
authors = ["kevin <kevin.campbellrage@gmail.com>"]
edition = "2021"

[dependencies]
binary-heap-plus = "0.5.0"
good_lp = { version = "1.14.2", features = ["highs"], default-features = false }
hashbrown = "0.16.1"
highs-sys = "1.12.1"
itertools = "0.14.0"
memoize = "0.5.1"
nalgebra = "0.34.1"
rayon = "1.11.0"
substring = "1.4.5"
